Implementing ptp request timeouts.
Also fix and improve a few things as suggested by bm01

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -357,6 +357,8 @@ Commands:
     ptp:
         Enabled: true
         Cooldown: 30
+        Confirm_Required: true
+        Request_Timeout: 300
     p:
         Enabled: true
     a:
