--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -347,6 +347,7 @@ permissions:
     mcmmo.tools.mcrefresh:
         description: Allows access to mcrefresh command
     mcmmo.tools.mmoedit:
+        default: false
         description: Allows access to mmoedit command
     mcmmo.tools.mcgod:
         description: Allows access to mcgod command
@@ -710,6 +711,7 @@ permissions:
             mcmmo.commands.defaults: true
             mcmmo.commands.inspect.far: true
             mcmmo.commands.inspect.offline: true
+            mcmmo.commands.mcability.others: true
             mcmmo.commands.mmoedit: true
             mcmmo.commands.mmoedit.others: true
             mcmmo.commands.mmoupdate: true
@@ -718,12 +720,13 @@ permissions:
     mcmmo.commands.defaults:
         description: Implies all default mcmmo.commands permissions.
         children:
-            mcmmo.commands.ability: true
             mcmmo.commands.inspect: true
+            mcmmo.commands.mcability: true
             mcmmo.commands.mcstats: true
             mcmmo.commands.party.all: true
             mcmmo.commands.ptp: true
     mcmmo.commands.ability:
+        default: false
         description: Allows access to the mcability command
     mcmmo.commands.addlevels:
         description: Allows access to the addlevels command
@@ -749,6 +752,10 @@ permissions:
         description: Allows access to the inspect command for far players
     mcmmo.commands.inspect.offline:
         description: Allows access to the inspect command for offline players
+    mcmmo.commands.mcability:
+        description: Allows access to the mcability command
+    mcmmo.commands.mcability.others:
+        description: Allows access to the mcability command for other players
     mcmmo.commands.mmoedit:
         description: Allows access to the mmoedit command
     mcmmo.commands.mmoedit.others:
@@ -986,4 +993,5 @@ permissions:
     mcmmo.skills.smelting:
         description: Allows access to the Smelting skill
     mcmmo.skillreset:
+        default: false
         description: Allow reset of skill levels
