--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -45,6 +45,7 @@ commands:
         aliases: []
         description: Add XP to a user
     addlevels:
+        description: Add mcMMO levels to a user
     mcability:
         aliases: []
         description: Toggle whether or not abilities get readied on right click
@@ -81,18 +82,31 @@ commands:
         aliases: []
         description: Reset the level of one or all of your skills
     excavation:
+        description: Detailed mcMMO skill info
     herbalism:
+        description: Detailed mcMMO skill info
     mining:
+        description: Detailed mcMMO skill info
     woodcutting:
+        description: Detailed mcMMO skill info
     axes:
+        description: Detailed mcMMO skill info
     archery:
+        description: Detailed mcMMO skill info
     swords:
+        description: Detailed mcMMO skill info
     taming:
+        description: Detailed mcMMO skill info
     unarmed:
+        description: Detailed mcMMO skill info
     acrobatics:
+        description: Detailed mcMMO skill info
     repair:
+        description: Detailed mcMMO skill info
     fishing:
+        description: Detailed mcMMO skill info
     smelting:
+        description: Detailed mcMMO skill info
     a:
         aliases: [ac]
         description: Toggle Admin chat or send admin chat messages
