--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -337,6 +337,8 @@ permissions:
         description: Allows access to mmoedit command
     mcmmo.tools.mcgod:
         description: Allows access to mcgod command
+        children:
+            mcmmo.commands.mcgod: true
     mcmmo.tools.mcremove:
         decription: Allows access to mcremove and mcpurge command
     mcmmo.ability.*:
@@ -698,6 +700,8 @@ permissions:
             mcmmo.commands.inspect.far: true
             mcmmo.commands.inspect.offline: true
             mcmmo.commands.mcability.others: true
+            mcmmo.commands.mcgod: true
+            mcmmo.commands.mcgod.others: true
             mcmmo.commands.mmoedit: true
             mcmmo.commands.mmoedit.others: true
             mcmmo.commands.mmoupdate: true
@@ -742,6 +746,10 @@ permissions:
         description: Allows access to the mcability command
     mcmmo.commands.mcability.others:
         description: Allows access to the mcability command for other players
+    mcmmo.commands.mcgod:
+        description: Allows access to the mcgod command
+    mcmmo.commands.mcgod.others:
+        description: Allows access to the mcgod command for other players
     mcmmo.commands.mmoedit:
         description: Allows access to the mmoedit command
     mcmmo.commands.mmoedit.others:
